refactor: 카테고리 조회 로직 개선 및 N+1 해결
- @BatchSize로 children IN절 일괄 조회
- LEFT JOIN FETCH로 parent 즉시 로딩
- 메모리 기반 트리 구성으로 추가 쿼리 방지